[package]
name = "ultrasonic_level_detector"
version = "0.1.0"
authors = ["Glenn Trigg"]
edition = "2021"
description = "Using a Raspberry Pi Pico and Adafruit RCWL-1601 ultrasonic transducer to detect substance levels."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
rp2040-hal = { version = "0.5.0", features = ["rt"] }
rp2040-boot2 = "0.2.0"
embedded-time = "0.12.1"